oveflow fix on smaller heights

--- a/front/src/pages/landing/landing.less
+++ b/front/src/pages/landing/landing.less
@@ -3,6 +3,7 @@
 @import "../../styles/colors.less";
 
 .landing {
+  overflow-y: scroll;
   .gradient();
   .vertical-center();
   height: 100%;
@@ -32,6 +33,7 @@
 
   .breakpoint(@xxl, {
       &__content {
+        padding-top: 5em;
         padding-left: 2em;
         padding-right: 2em;
       }
